Wed May 28 21:59:04 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/odbc/odbc.c src/pool/member.c:
	* src/tds/token.c src/tds/unittests/t0003.c:
	- cleanup tds_process_default_tokens (now static)

Wed May 28 21:31:02 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/dblib/bcp.c src/tds/token.c:
	- end tds_process_end cleanup (now static)
	- use tds_process_simple_query instead of 
	  tds_get_byte/tds_process_default_tokens

Wed May 28 21:12:42 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c: tds_process_end cleanup

Wed May 28 16:51:08 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c src/dblib/bcp.c src/dblib/dblib.c:
	- tds_process_end cleanup
	- cleanup

Wed May 28 13:59:10 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c src/dblib/dblib.c:
	- start tds_process_end cleanup

Wed May 28 11:03:34 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/moreandcount.c:
	- improve test (do not pass)

Tue May 27 22:16:05 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c:
	- update SQLExecute to fix funccall test

Mon May 26 20:44:16 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/tsql.c: other QNX4 fix

Mon May 26 16:05:58 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/freebcp.c: fix compile on QNX4

Sun May 25 19:59:35 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in src/odbc/connectparams.c:
	- autodetect odbc

Sun May 25 19:14:21 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: remove unused variable
	* src/odbc/sql2tds.c:
	- fixed fixed types param binding 

Thu May 22 16:36:36 EDT 2003	nsc <Nicholas_Castellano@acml.com>
	* include/tds.h src/tds/config.c src/tds/iconv.c src/tds/mem.c
	  src/tds/write.c:
	- const cleanups.

Thu May 22 15:31:31 EDT 2003	nsc <Nicholas_Castellano@acml.com>
	* src/apps/tsql.c:
	- Remove unused variable "buf".
